[package]
name = "duxtape"
version = "0.1.0"
authors = []

[lib]
name = "duxtape"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.20.0"
rustler_codegen = "0.20.0"
lazy_static = "1.0"
futures = "0.1.28"
tokio = "0.1.22"
deno = "0.12.0"
# ducc = { git = "https://github.com/SkylerLipthay/ducc" }
